# libsecureboard

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  VERSION  bootstrap.sh  builddoc.sh  post_install.cmake  release.sh  scv.sh
ca/: README.txt
ca/client-cert/: alice.pem  bob.pem  client-root-ca.der  client-root-ca.pem  client-root-ca.srl
ca/client-cert/keys/: alice-key.pem  bob-key.pem  client-root-ca-key.pem
ca/user-device-ca/: device_root_ca.pem  device_root_ca.srl
ca/user-device-ca/key/: device_root_ca-key.pem
ca/user-devices/: device01-csr.pem  device01-key.pem  device01.der
script/: mk_cert.sh
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  evdev.c  evdev.h  secureboard.c
src/doc/: doxygen.config
src/lib/: CMakeLists.txt  connection.c  secureboard.c  usb_encap.c
src/lib/include/secureboard/: connection.h  error.h  secureboard.h  usb.h  usb_encap.h
src/lib/internal/: secureboard.h
src/sb-relayd/: CMakeLists.txt  inet-socket.c  inet-socket.h  sb-relayd.c  sb-relayd.h  threads.c  threads.h  udev.c  udev.h  unix-socket.c  unix-socket.h
src/sb-relayd/etc/: 95-secureboard.rules.in  CMakeLists.txt  sb-relayd.conf.in  sb-relayd@.service.in
tools/: device.ext  openssl.cnf  production.ext
